--- a/utils/build.config
+++ b/utils/build.config
@@ -6,6 +6,7 @@ ARGOBOTS = v1.1
 PMDK = 1.12.1
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
+JEMALLOC = 5.3.0
 SPDK = v22.01.2
 OFI = v1.17.1
 MERCURY = v2.2.0
